Fix edit form display when on dark mode, and mobile view

--- a/src/Styles/profile.scss
+++ b/src/Styles/profile.scss
@@ -156,7 +156,7 @@
   padding: 2% 3%;
   border-radius: 1.5em;
   border: 2px black solid;
-  box-shadow: 0 0 20px 10px lightgray;
+  box-shadow: 0 0 20px 0 lightgray;
   fieldset{
     border-radius: 1em;
   }
@@ -272,8 +272,8 @@
   }
 
   .edit-form{
-    width: 75%;
-    height: 45%;
+    width: 90%;
+    height: 50%;
     padding: 5%;
   }  
 }
